--- a/academics/courses.html
+++ b/academics/courses.html
@@ -1,173 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courses - Academic Portal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .hero-section {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 80px 0;
-        }
-        .course-card {
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            height: 100%;
-        }
-        .course-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-        }
-        .badge-custom {
-            padding: 0.5em 1em;
-            font-size: 0.85rem;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Courses | Academic Programmes</title>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<style>
+/* Hero */
+.hero-section {
+  background: linear-gradient(135deg, #5f2c82, #49a09d);
+  color: #fff;
+  padding: 70px 0;
+}
+
+/* Course Card */
+.course-card {
+  border: 1px solid #e3e3e3;
+  border-radius: 10px;
+  height: 100%;
+  background: #fff;
+  transition: all 0.25s ease;
+}
+
+.course-card:hover {
+  box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+  transform: translateY(-4px);
+}
+
+.badge-custom {
+  border-radius: 20px;
+  font-weight: 500;
+  font-size: 0.75rem;
+}
+
+.course-card h5 {
+  font-size: 1.05rem;
+  font-weight: 600;
+}
+
+.course-card p {
+  font-size: 0.9rem;
+}
+
+.department-label {
+  font-size: 0.8rem;
+  color: #6c757d;
+}
+</style>
 </head>
+
 <body>
-    <div id="navbar"></div>
+<div id="navbar"></div>
+<!-- HERO -->
+<section class="hero-section text-center">
+  <div class="container">
+    <h1 class="display-6 fw-bold mb-2">Academic Programmes</h1>
+    <p class="lead mb-0">
+      Undergraduate & Postgraduate Courses Offered by the University
+    </p>
+  </div>
+</section>
 
-    <!-- Hero Section -->
-    <section class="hero-section text-center">
-        <div class="container">
-            <h1 class="display-4 fw-bold mb-3">Our Courses</h1>
-            <p class="lead">Explore our comprehensive range of academic programs</p>
+<!-- COURSES -->
+<section class="py-5">
+<div class="container">
+
+  <div class="row mb-4 align-items-center">
+    <div class="col-md-8">
+      <h3 class="mb-1">List of Courses</h3>
+      <p class="text-muted mb-0">
+        As per UGC & University Regulations
+      </p>
+    </div>
+    <div class="col-md-4">
+      <select class="form-select" id="filterCourses">
+        <option selected>All Departments</option>
+        <option>Arts & Humanities</option>
+        <option>Science</option>
+        <option>Commerce & Management</option>
+        <option>Law</option>
+        <option>Education</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="row g-4">
+
+    <!-- ARTS -->
+    <div class="col-md-6 col-lg-4 course-item" data-dept="Arts & Humanities">
+      <div class="card course-card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="badge bg-primary badge-custom">BA-ENG</span>
+            <span class="badge bg-success badge-custom">UG</span>
+          </div>
+          <h5>B.A. in English</h5>
+          <div class="department-label mb-2">Department of English</div>
+          <p class="text-muted">
+            Study of English literature, language, criticism, and cultural studies.
+          </p>
+          <a href="#" class="btn btn-outline-primary btn-sm w-100">View Details</a>
         </div>
-    </section>
+      </div>
+    </div>
 
-    <!-- Courses Section -->
-    <section class="py-5">
-        <div class="container">
-            <div class="row mb-4">
-                <div class="col-md-8">
-                    <h2 class="mb-3">Available Courses</h2>
-                    <p class="text-muted">Browse through our diverse course offerings across multiple disciplines</p>
-                </div>
-                <div class="col-md-4 text-md-end">
-                    <select class="form-select" id="filterCourses">
-                        <option selected>All Departments</option>
-                        <option>Computer Science</option>
-                        <option>Business Administration</option>
-                        <option>Engineering</option>
-                        <option>Liberal Arts</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="row g-4">
-                <!-- Course Card 1 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card course-card">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-start mb-3">
-                                <span class="badge bg-primary badge-custom">CS-101</span>
-                                <span class="badge bg-success badge-custom">4 Credits</span>
-                            </div>
-                            <h5 class="card-title">Introduction to Programming</h5>
-                            <p class="card-text text-muted">Learn the fundamentals of programming using Python. Covers variables, control structures, functions, and basic algorithms.</p>
-                            <div class="mb-3">
-                                <small class="text-muted"><strong>Prerequisites:</strong> None</small>
-                            </div>
-                            <a href="#" class="btn btn-outline-primary w-100">View Details</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Course Card 2 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card course-card">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-start mb-3">
-                                <span class="badge bg-primary badge-custom">BUS-201</span>
-                                <span class="badge bg-success badge-custom">3 Credits</span>
-                            </div>
-                            <h5 class="card-title">Business Management</h5>
-                            <p class="card-text text-muted">Explore core management principles, organizational behavior, and strategic planning in modern business environments.</p>
-                            <div class="mb-3">
-                                <small class="text-muted"><strong>Prerequisites:</strong> BUS-101</small>
-                            </div>
-                            <a href="#" class="btn btn-outline-primary w-100">View Details</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Course Card 3 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card course-card">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-start mb-3">
-                                <span class="badge bg-primary badge-custom">ENG-301</span>
-                                <span class="badge bg-success badge-custom">4 Credits</span>
-                            </div>
-                            <h5 class="card-title">Structural Engineering</h5>
-                            <p class="card-text text-muted">Advanced study of structural analysis, design principles, and material properties in civil engineering applications.</p>
-                            <div class="mb-3">
-                                <small class="text-muted"><strong>Prerequisites:</strong> ENG-201, MATH-202</small>
-                            </div>
-                            <a href="#" class="btn btn-outline-primary w-100">View Details</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Course Card 4 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card course-card">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-start mb-3">
-                                <span class="badge bg-primary badge-custom">CS-250</span>
-                                <span class="badge bg-success badge-custom">3 Credits</span>
-                            </div>
-                            <h5 class="card-title">Data Structures & Algorithms</h5>
-                            <p class="card-text text-muted">In-depth exploration of data structures, algorithm design, complexity analysis, and problem-solving techniques.</p>
-                            <div class="mb-3">
-                                <small class="text-muted"><strong>Prerequisites:</strong> CS-101</small>
-                            </div>
-                            <a href="#" class="btn btn-outline-primary w-100">View Details</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Course Card 5 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card course-card">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-start mb-3">
-                                <span class="badge bg-primary badge-custom">LA-150</span>
-                                <span class="badge bg-success badge-custom">3 Credits</span>
-                            </div>
-                            <h5 class="card-title">World Literature</h5>
-                            <p class="card-text text-muted">Survey of significant literary works from various cultures and time periods, analyzing themes and cultural contexts.</p>
-                            <div class="mb-3">
-                                <small class="text-muted"><strong>Prerequisites:</strong> None</small>
-                            </div>
-                            <a href="#" class="btn btn-outline-primary w-100">View Details</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Course Card 6 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card course-card">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-start mb-3">
-                                <span class="badge bg-primary badge-custom">BUS-310</span>
-                                <span class="badge bg-success badge-custom">3 Credits</span>
-                            </div>
-                            <h5 class="card-title">Marketing Strategy</h5>
-                            <p class="card-text text-muted">Study of marketing principles, consumer behavior, branding, and digital marketing strategies in contemporary markets.</p>
-                            <div class="mb-3">
-                                <small class="text-muted"><strong>Prerequisites:</strong> BUS-201</small>
-                            </div>
-                            <a href="#" class="btn btn-outline-primary w-100">View Details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="col-md-6 col-lg-4 course-item" data-dept="Arts & Humanities">
+      <div class="card course-card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="badge bg-primary badge-custom">BA-HIS</span>
+            <span class="badge bg-success badge-custom">UG</span>
+          </div>
+          <h5>B.A. in History</h5>
+          <div class="department-label mb-2">Department of History</div>
+          <p class="text-muted">
+            Indian and world history with emphasis on social and cultural developments.
+          </p>
+          <a href="#" class="btn btn-outline-primary btn-sm w-100">View Details</a>
         </div>
-    </section>
+      </div>
+    </div>
+
+    <!-- SCIENCE -->
+    <div class="col-md-6 col-lg-4 course-item" data-dept="Science">
+      <div class="card course-card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="badge bg-primary badge-custom">BSC-PHY</span>
+            <span class="badge bg-success badge-custom">UG</span>
+          </div>
+          <h5>B.Sc. in Physics</h5>
+          <div class="department-label mb-2">Department of Physics</div>
+          <p class="text-muted">
+            Classical and modern physics with laboratory-based learning.
+          </p>
+          <a href="#" class="btn btn-outline-primary btn-sm w-100">View Details</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 col-lg-4 course-item" data-dept="Science">
+      <div class="card course-card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="badge bg-primary badge-custom">MSC-CHE</span>
+            <span class="badge bg-warning text-dark badge-custom">PG</span>
+          </div>
+          <h5>M.Sc. in Chemistry</h5>
+          <div class="department-label mb-2">Department of Chemistry</div>
+          <p class="text-muted">
+            Advanced organic, inorganic and physical chemistry.
+          </p>
+          <a href="#" class="btn btn-outline-primary btn-sm w-100">View Details</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- COMMERCE -->
+    <div class="col-md-6 col-lg-4 course-item" data-dept="Commerce & Management">
+      <div class="card course-card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="badge bg-primary badge-custom">B.COM</span>
+            <span class="badge bg-success badge-custom">UG</span>
+          </div>
+          <h5>Bachelor of Commerce</h5>
+          <div class="department-label mb-2">Department of Commerce</div>
+          <p class="text-muted">
+            Accounting, finance, taxation, economics and business studies.
+          </p>
+          <a href="#" class="btn btn-outline-primary btn-sm w-100">View Details</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- LAW -->
+    <div class="col-md-6 col-lg-4 course-item" data-dept="Law">
+      <div class="card course-card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="badge bg-primary badge-custom">LLB</span>
+            <span class="badge bg-warning text-dark badge-custom">PG</span>
+          </div>
+          <h5>Bachelor of Laws (LL.B.)</h5>
+          <div class="department-label mb-2">Department of Law</div>
+          <p class="text-muted">
+            Constitutional law, criminal law, civil procedure and jurisprudence.
+          </p>
+          <a href="#" class="btn btn-outline-primary btn-sm w-100">View Details</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- EDUCATION -->
+    <div class="col-md-6 col-lg-4 course-item" data-dept="Education">
+      <div class="card course-card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="badge bg-primary badge-custom">B.ED</span>
+            <span class="badge bg-warning text-dark badge-custom">PG</span>
+          </div>
+          <h5>Bachelor of Education</h5>
+          <div class="department-label mb-2">Department of Education</div>
+          <p class="text-muted">
+            Teacher training programme with pedagogy and practical teaching.
+          </p>
+          <a href="#" class="btn btn-outline-primary btn-sm w-100">View Details</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+</section>
 <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script.js"></script>
+<script src="../script.js"></script>
+<script>
+const filter = document.getElementById("filterCourses");
+const courses = document.querySelectorAll(".course-item");
+
+filter.addEventListener("change", () => {
+  const selected = filter.value;
+  courses.forEach(course => {
+    course.style.display =
+      selected === "All Departments" || course.dataset.dept === selected
+        ? "block"
+        : "none";
+  });
+});
+</script>
+
 </body>
 </html>
