--- a/admission/ug.html
+++ b/admission/ug.html
@@ -1,45 +1,356 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>UG Admission</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<div id="navbar"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>UG Admission</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+        <style>
+  /* General */
+  body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f8f9fa;
+  }
 
-<section class="bg-primary text-white py-5 text-center">
-  <h1>Undergraduate (UG) Admission</h1>
-  <p>Academic Year 2025–26</p>
-</section>
+  h1, h3 {
+    font-weight: 600;
+  }
 
-<div class="container py-5">
-  <h3>Available UG Programs</h3>
-  <ul class="list-group mb-4">
-    <li class="list-group-item">B.Tech</li>
-    <li class="list-group-item">B.Sc</li>
-    <li class="list-group-item">B.Com</li>
-    <li class="list-group-item">B.A</li>
-  </ul>
+  /* Hero Section */
+  section.bg-primary {
+    background: linear-gradient(135deg, #0d6efd, #0a58ca);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  }
 
-  <h3>Eligibility Criteria</h3>
-  <p>Passed 10+2 from a recognized board with minimum required marks.</p>
+  /* Accordion Styling */
+  .accordion-item {
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 15px;
+    border: none;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+  }
 
-  <h3>Admission Process</h3>
-  <ol>
-    <li>Online Application</li>
-    <li>Merit / Entrance Test</li>
-    <li>Document Verification</li>
-    <li>Fee Payment</li>
-  </ol>
+  .accordion-button {
+    background-color: #ffffff;
+    font-weight: 600;
+    color: #0d6efd;
+  }
 
-  <a href="#" class="btn btn-success mt-3">Apply Now</a>
-</div>
+  .accordion-button:not(.collapsed) {
+    background-color: #e7f1ff;
+    color: #084298;
+  }
 
-<div id="footer"></div>
+  .accordion-button:focus {
+    box-shadow: none;
+  }
+
+  .accordion-body {
+    background-color: #ffffff;
+  }
+
+  /* Table Styling */
+  table {
+    margin-bottom: 0;
+  }
+
+  table th {
+    background-color: #0d6efd;
+    color: white;
+    text-align: center;
+  }
+
+  table td {
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  table tr:hover {
+    background-color: #f1f5ff;
+  }
+
+  /* Eligibility Section */
+  section.container {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  section.container h3 {
+    color: #0d6efd;
+    margin-top: 20px;
+  }
+
+  section.container ol {
+    padding-left: 20px;
+  }
+
+  section.container ol li {
+    margin-bottom: 8px;
+    font-weight: 500;
+  }
+
+  /* Apply Button */
+  .btn-success {
+    font-size: 18px;
+    padding: 10px 30px;
+    border-radius: 50px;
+    font-weight: 600;
+    box-shadow: 0 4px 10px rgba(25, 135, 84, 0.4);
+    transition: all 0.3s ease;
+  }
+
+  .btn-success:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 15px rgba(25, 135, 84, 0.6);
+  }
+
+  /* Responsive Improvements */
+  @media (max-width: 768px) {
+    h1 {
+      font-size: 26px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    table {
+      font-size: 14px;
+    }
+  }
+</style>
+  </head>
+  <body>
+    <div id="navbar"></div>
+
+    <section class="bg-primary text-white py-5 text-center">
+      <h1>Undergraduate (UG) Admission</h1>
+      <p>Academic Year 2025–26</p>
+    </section>
+
+    <div class="container py-5">
+      <h3 class="mb-4">Available UG Programs (Subject-wise Seat Capacity)</h3>
+
+      <div class="accordion" id="ugProgramsAccordion">
+        <!-- B.Tech -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#btech"
+            >
+              B.Tech (Bachelor of Technology)
+            </button>
+          </h2>
+          <div
+            id="btech"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#ugProgramsAccordion"
+          >
+            <div class="accordion-body">
+              <table class="table table-bordered">
+                <thead class="table-light">
+                  <tr>
+                    <th>Branch</th>
+                    <th>Total Seats</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Computer Science & Engineering</td>
+                    <td>120</td>
+                  </tr>
+                  <tr>
+                    <td>Electrical Engineering</td>
+                    <td>60</td>
+                  </tr>
+                  <tr>
+                    <td>Mechanical Engineering</td>
+                    <td>60</td>
+                  </tr>
+                  <tr>
+                    <td>Civil Engineering</td>
+                    <td>60</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- B.Sc -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#bsc"
+            >
+              B.Sc (Bachelor of Science)
+            </button>
+          </h2>
+          <div
+            id="bsc"
+            class="accordion-collapse collapse"
+            data-bs-parent="#ugProgramsAccordion"
+          >
+            <div class="accordion-body">
+              <table class="table table-bordered">
+                <tr>
+                  <th>Subject</th>
+                  <th>Seats</th>
+                </tr>
+                <tr>
+                  <td>Physics</td>
+                  <td>80</td>
+                </tr>
+                <tr>
+                  <td>Chemistry</td>
+                  <td>80</td>
+                </tr><tr>
+                  <td>Botany</td>
+                  <td>80</td>
+                </tr><tr>
+                  <td>Zoology</td>
+                  <td>80</td>
+                </tr>
+                <tr>
+                  <td>Mathematics</td>
+                  <td>80</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- B.Com -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#bcom"
+            >
+              B.Com (Bachelor of Commerce)
+            </button>
+          </h2>
+          <div
+            id="bcom"
+            class="accordion-collapse collapse"
+            data-bs-parent="#ugProgramsAccordion"
+          >
+            <div class="accordion-body">
+              <table class="table table-bordered">
+                <tr>
+                  <th>Specialization</th>
+                  <th>Seats</th>
+                </tr>
+                <tr>
+                  <td>Accounting & Finance</td>
+                  <td>120</td>
+                </tr>
+                <tr>
+                  <td>Banking & Insurance</td>
+                  <td>60</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- B.A -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#ba"
+            >
+              B.A (Bachelor of Arts)
+            </button>
+          </h2>
+          <div
+            id="ba"
+            class="accordion-collapse collapse"
+            data-bs-parent="#ugProgramsAccordion"
+          >
+            <div class="accordion-body">
+              <table class="table table-bordered">
+                <tr>
+                  <th>Subject</th>
+                  <th>Seats</th>
+                </tr>
+                <tr>
+                  <td>English</td>
+                  <td>60</td>
+                </tr>
+                <tr>
+                  <td>History</td>
+                  <td>60</td>
+                </tr>
+                <tr>
+                  <td>Odia</td>
+                  <td>60</td>
+                </tr>
+                <tr>
+                  <td>Education</td>
+                  <td>60</td>
+                </tr>
+                <tr>
+                  <td>Economics</td>
+                  <td>60</td>
+                </tr>
+                <tr>
+                  <td>Hindi</td>
+                  <td>60</td>
+                </tr>
+                <tr>
+                  <td>Sanskrit</td>
+                  <td>60</td>
+                </tr>
+                <tr>
+                  <td>Political Science</td>
+                  <td>60</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="container py-5 align-items-center">
+      <h3>Eligibility Criteria</h3>
+      <p>Passed 10+2 from a recognized board with minimum required marks.</p>
+
+      <h3>Admission Process</h3>
+      <ol>
+        <li>Online Application</li>
+        <li>Merit / Entrance Test</li>
+        <li>Document Verification</li>
+        <li>Fee Payment</li>
+      </ol>
+       <a
+      href="https://degree.samsodisha.gov.in/DegreeNew/index.aspx"
+      class="btn btn-success mt-3 d-flex align-items-center justify-content-center"
+      >Apply Now</a
+    >
+    </section>
+
+   
+
+    <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../script.js"></script>
-
-</body>
+  </body>
 </html>
